changed test for cycled list